# autonomous_drone_plant_detection

./: LICENSE  README.md  install-cuda-10-bionic.sh  post_programm_install.sh  ros_and_conda_install.sh
cam_latency/: README.md  READMw.md  package.xml
cam_latency/scripts/: compute_latency.py  topic_info.py
cam_processing/: CMakeLists.txt  package.xml  readme.md
cam_processing/calibrations/: H02_AIO_CamInfo.yaml  video_setting.yaml
cam_processing/launch/: cam_crazyflie.launch
cam_processing/src/: cam_processing.py
darknet_ros/: .gitmodules
darknet_ros/darknet_ros/: CMakeLists.txt
environment_sensor/: CMakeLists.txt  package.xml  readme.md
environment_sensor/msg/: BME680.msg  SCD30.msg
environment_sensor/scripts/: bme680_receive.py  scd30_receive.py
environment_sensor/src/: bme680_node.py
environment_sensor_plot/: CMakeLists.txt  README.md  package.xml
environment_sensor_plot/scripts/: scd30_plot.py  scd30_plot_load.py  tello_battery_plot.py
localize_plants/: CMakeLists.txt  package.xml  readme.md
localize_plants/config/: config.rviz  localize.yaml  localize_fd143a.yaml
pointcloud_editor/: .project  CMakeLists.txt  README.md  package.xml
pointcloud_editor/config/: cloud.cfg  (+1 more)
sort_track/: CMakeLists.txt  package.xml
tello_controller/: CMakeLists.txt  package.xml  readme.md
tello_description/: README.md  package.xml
tello_driver/: README.md
tello_keyboard_teleop/: CMakeLists.txt  README.md  package.xml  tello_keyboard_teleop.py  tello_keyboard_teleop_2.py
tello_rqt_gui/: CMakeLists.txt  package.xml  plugin.xml  readme.md  setup.py
(+52 files in other folders)
